@@ -5941,6 +5941,9 @@
                             <para>Revamped search dialog</para>
                         </listitem>
                         <listitem>
+                            <para>Revamped transfer progress dialog</para>
+                        </listitem>
+                        <listitem>
                             <para>Updated help docs</para>
                         </listitem>
                         <listitem>
