@@ -11,6 +11,7 @@ New features:
  * User defined shortcuts to arbitrary programs
  * Copying selected URIs to clipboard with ALT+click on toolbar button
  * Revamped search dialog
+ * Revamped transfer progress dialog
  * Updated help docs
  * New or updated translations: cs, de, es, fr, it, ja, oc, pl
  * New key bindings:
