@@ -1,3 +1,10 @@
+2008-07-14  Dušan Hokův  <dusan@mirc.cz>
+
+	* src/gnome-cmd-xfer.cc:
+	* src/gnome-cmd-xfer-progress-win.cc:
+	* src/gnome-cmd-xfer-progress-win.h:
+	New progress indicator for individual files for transfer dialogs
+
 2008-07-13  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/libgviewer/viewer-window.cc:
